# port-scanner

./: .gitignore  LICENSE  README.md  pyproject.toml  run_scanner.py
.github/workflows/: tests.yml
port_scanner/: __init__.py  cli.py  exporters.py  known_ports.py  models.py  os_detection.py  scanner.py
tests/: test_os_detection.py  test_scanner.py
